# FaceRecogBackend

./: .gitignore  CMakeLists.txt  build.sh  run.sh  temp.txt  test.html  test.sh
inference/: infer-bridge.cpp  infer-bridge.h  infer.cpp  infer.h  model.h
src/: go.mod  go.sum  main.go
src/database/: database.go  mongoDB.go  person.go
src/endpoints/: addPerson.go  endpoints.go  getPeople.go  getResults.go  status.go
src/infer/: infer.go  infer_test.go
src/main/: main.go  utils.go
static/: index.html
